--- a/src/css/page.css
+++ b/src/css/page.css
@@ -1,5 +1,5 @@
-@import url(/reprograma-inicial/src/css/header.css);
-@import url(/reprograma-inicial/src/css/footer.css);
+/* @import url(/reprograma-inicial/src/css/header.css);
+@import url(/reprograma-inicial/src/css/footer.css); */
 
 .container {
     max-width: 1170px;
